# Multimodal-Virtual-Communication-System

./: .gitignore  README.md
Doc for Project/: PROPOSAL OF PERSONAL PROJECT MULTIMODAL VIRTUAL COMMUNICATE SYSTEM.md  checklist.md  short for demo v1 proposal.md
Doc for Project/Plan/: Demo_Overview_for_Presentation.md  Detailed_Playbook_MVP.md  Plan.md
Doc for Project/Process_log/FEB/: feb_week1_process_log.md
Doc for Project/Process_log/JAN/: Jan_week4_process_log.md  Jan_week5_process_log.md
Doc for Project/report/: report_jan-feb.md
fer/: README.md  pyproject.toml  requirements.txt
fer/configs/: fer_vit_tiny_kd.yaml
fer/scripts/: make_dummy_dataset.py
fer/src/fer_system/: utils.py
fer/src/fer_system/cli/: __init__.py  __main__.py  eval.py  train.py
fer/src/fer_system/data/: datasets.py  transforms.py
fer/src/fer_system/eval/: evaluate.py  metrics.py
fer/src/fer_system/models/: arcface.py  backbones.py
fer/src/fer_system/stress/: __init__.py  degradation.py  imbalance.py
fer/src/fer_system/training/: distill.py  train_loop.py
realtime_fer/Real-time-Facial-Expression-Recognition-System/: .env.example  BACKUP_README.md  pip_freeze.txt  requirements-online.txt  requirements-prosody.txt  run_latency.ps1  run_mvp.ps1  table.md
realtime_fer/Real-time-Facial-Expression-Recognition-System/demo/: mvp_demo.py  realtime_demo.py
realtime_fer/Real-time-Facial-Expression-Recognition-System/docs/: demo_recording_script.md  mvp_demo_playbook.md  realtime_demo_playbook.md  realtime_demo_usb_pack.md
(+39 files in other folders)
